--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>
+    <header class="header">
+        <h1 class="site-title">
             <span>Manuel Ortiz</span>
         </h1>
     </header>
-</body>
+    <section>
+        <a href="portfolio/projects.html">Home</a>
+        <a href="portfolio/projects.html">About Me</a>
+        <a href="portfolio/projects.html">Resume</a>
+        <a href="portfolio/projects.html">Projects</a>
+        <a href="portfolio/projects.html">The Blog</a>
+        <a href="portfolio/projects.html">Contact</a>
+        <a href="portfolio/projects.html">Email</a>
+    </section>
 </html>
