--- a/index.html
+++ b/index.html
@@ -12,14 +12,23 @@
         <h1 class="site-title">
             <span>Manuel Ortiz</span>
         </h1>
+        <p class="site-description">
+            "I am "
+            <strong id="typist-element" data-typist="an innovation strategist.,a science communicator">
+                <em class="selectedtext"></em>
+            </strong>
+        </p>
     </header>
     <section>
-        <a href="portfolio/projects.html">Home</a>
-        <a href="portfolio/projects.html">About Me</a>
-        <a href="portfolio/projects.html">Resume</a>
-        <a href="portfolio/projects.html">Projects</a>
-        <a href="portfolio/projects.html">The Blog</a>
-        <a href="portfolio/projects.html">Contact</a>
-        <a href="portfolio/projects.html">Email</a>
+        <a href="index.html">Home</a>
+        <a href="portfolio projects/about.html">About Me</a>
+        <a href="portfolio projects/resume.html">Resume</a>
+        <a href="portfolio projects/projects.html">Projects</a>
+        <a href="portfolio projects/blog.html">The Blog</a>
+        <a href="portfolio projects/contact.html">Contact</a>
+        <a href="portfolio projects/email.html">Email</a>
+    </section>
+    <section>
+        <a href=""></a>
     </section>
 </html>
