social media and other updates

--- a/index.html
+++ b/index.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>manuelortizus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <main>
     <header class="header">
         <h1 class="site-title">
             <span>Manuel Ortiz</span>
         </h1>
         <p class="site-description">
-            "I am "
+            "I'm human being so curious about the truth of the Universe/Everything"
             <strong id="typist-element" data-typist="an innovation strategist.,a science communicator">
                 <em class="selectedtext"></em>
             </strong>
         </p>
     </header>
+    <section>
+        <a class="fa fa-github" href="https://GitHub.com/manuelortizus"></a>
+        <a class="fa fa-linkdin" href="https://www.linkedin.com/in/manuel-ortiz-b10a03175/">Linkdin</a>
+        <a class="fa fa-discord" href="https://discord.gg/qXAnaAkk">Discord Community</a>
+        <a class="fa fa-slack" href="https://join.slack.com/t/newworkspace-f593788/shared_invite/zt-1ketvrb7o-h3Smw79wO465rRwxE4Uqkw">Slack Community</a>
+        <a class="fa fa-youtube" href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
+        <a href="https://medium.com/@manuelortizus">Medium</a>
+        <a href="https://twitter.com/manuelortizus">Twitter</a>
+        <a href="https://Instagram.com/manuelortizus">Instagram</a>
+        <a href="https://Facebook.com/manuelortizus2">Facebook</a>
+        <a href="https://TikTok.com/@manuelortizus">TikTok</a>
+    </section>
     <section>
         <a href="index.html">Home</a>
         <a href="portfolio projects/about.html">About Me</a>
@@ -31,4 +45,5 @@
     <section>
         <a href=""></a>
     </section>
+    </main>
 </html>
