--- a/portfolio projects/projects.html
+++ b/portfolio projects/projects.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portolio Projects</title>
 </head>
 <body>
     <header>Portfolio Projects: Learning Building</header>
     <section>
         <p>FreeCodeCamp</p>
-        <a href="">CatApp Website</a>
+        <a href="freeCodeCamp/catPhotoApp.html">Cat Photo App</a>
         <a href="">cafe</a>
     </section>
     <section>
         <p>ITFIP</p>
-        <a href=""></a>
+        <a href="">Source</a>
+        <a href="">Clock Proteus</a>
+        <a href="">Clock resonato with capcitor</a>
+        <a href="">House Electric System</a>
+        <a href="">Maintanance</a>
+        <a href="">Motor Controler</a>
+        <a href="">Car Remote</a>
+        <a href="">PLC</a>
+        <a href="">Car meter counter</a>
+        <a href="">Python Coding Anthem ITFIP with Colab and Spider</a>
+
     </section>
     <section>
         <p>SENA</p>
@@ -23,8 +33,9 @@
     </section>
     <section>
         <p>Platzi</p>
-        <a href="">JavaScript School</a>
-        <a href="">Portfolio Projects</a>
+        <a href="">JavaScript</a>
+        <a href="">Data Science, AI, ML</a>
+        <a href="">Portfolio</a>
     </section>
 </body>
 </html>
