25/11/2022 myWebsite Portfolio update

--- a/portfolio projects/projects.html
+++ b/portfolio projects/projects.html
@@ -7,14 +7,17 @@
     <title>Portolio Projects</title>
 </head>
 <body>
-    <header>Portfolio Projects: Learning Building</header>
+    <header><h1>Portfolio Projects: Learning Building, doing, creating...</h1></header>
     <section>
-        <p>FreeCodeCamp</p>
-        <a href="freeCodeCamp/catPhotoApp.html">Cat Photo App</a>
-        <a href="">cafe</a>
+        <a href="https://freecodecamp.org">FreeCodeCamp</a>
+        <li>New Responsibe Web Design</li>
+        <a href="freeCodeCamp/New Reponsibe Web Design/catPhotoApp.html">Cat Photo App</a>
+        <a href="freeCodeCamp/newReponsibeWebDesign/cafeMenu/cafeMenu.html">Cafe Menu</a>
     </section>
     <section>
-        <p>ITFIP</p>
+        <h2>
+            ITFIP
+        </h2>
         <a href="">Source</a>
         <a href="">Clock Proteus</a>
         <a href="">Clock resonato with capcitor</a>
@@ -32,10 +35,13 @@
         <a href="">Portfolio</a>
     </section>
     <section>
-        <p>Platzi</p>
+        <h2>
+            <a href="https:/platzi.com">Platzi</a>
+        </h2>
         <a href="">JavaScript</a>
         <a href="">Data Science, AI, ML</a>
         <a href="">Portfolio</a>
+        <a href="">English</a>
     </section>
 </body>
 </html>
