--- a/portfolio projects/Platzi/index.html
+++ b/portfolio projects/Platzi/index.html
@@ -25,6 +25,9 @@
                         <a href="./projects.html">Projects</a>
                     </li>
                     <li>
+                        <a href="./learningBuilding.html">LearningBulding, practical notes</a>
+                    </li>
+                    <li>
                         <a href="./about.html">About me</a>
                     </li>
                 </ul>
