25/11/2022 myWebsite Portfolio update 2

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="">ABOUT ME</a>
                 <a href="">RESUME</a>
                 <a href="">PROJECTS</a>
+                <a href="learningBulding.html">LEARNING BUILDING</a>
                 <a href="">THE BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
