--- a/portfolioProjects/projects.html
+++ b/portfolioProjects/projects.html
@@ -40,7 +40,7 @@
         </h2>
         <a href="">JavaScript</a>
         <a href="">Data Science, AI, ML</a>
-        <a href="">Portfolio</a>
+        <a href="Platzi/portfolio-1/index.html">Portfolio</a>
         <a href="">English</a>
     </section>
 </body>
