--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="index.html">HOME</a>
                 <a href="">ABOUT ME</a>
                 <a href="">RESUME</a>
-                <a href="">PROJECTS</a>
+                <a href="portfolioProjects/projects.html">PROJECTS</a>
                 <a href="learningBulding.html">LEARNING BUILDING</a>
                 <a href="">THE BLOG</a>
                 <a href="">CONTACT</a>
