--- a/portfolioProjects/Platzi/portfolio-1/index.html
+++ b/portfolioProjects/Platzi/portfolio-1/index.html
@@ -12,9 +12,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
+        <header class="header">
+            <img class="header--img" src="https://i.pinimg.com/564x/43/14/4b/43144be47dc0c9367238d8f5c923b66e.jpg" alt="manuelortizus logo">
+            <a href="./index.html">Home</a>
+            <nav class="header--nav">
+                <ul class="header--list">
                     <li>
                         <a href="./contact.html">Contact</a>
                     </li>
