--- a/portfolioProjects/Platzi/portfolio-1/index.html
+++ b/portfolioProjects/Platzi/portfolio-1/index.html
@@ -32,24 +32,30 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <img src="https://picsum.photos/200" alt="My profile photo">
-            <h2>manuelortizus portfolio</h2>
-            <p>This will be my description</p>
-            <div>
-                <a href="/contact.html">Contact</a>
-                <a href="/about.html">About me</a>
-            </div>
-            <div>
-                <h2>Social Media</h2>
-                <ul>
-                    <li>
-                        <a href="">Twitter</a>
-                        <a href="">Linkedin</a>
-                        <a href="">Instagram</a>
-                    </li>
-                </ul>
-            </div>
+        <main class="main">
+            <section class="main--container">
+                <picture>
+                    <img class="main--img" src="https://picsum.photos/200" alt="My profile photo">
+                </picture>
+                <article>
+                    <h2>manuelortizus portfolio</h2>
+                    <p>This will be my description</p>
+                    <article>
+                        <a href="/contact.html">Contact</a>
+                        <a href="/about.html">About me</a>
+                    </article>
+                    <article>
+                        <h2>Social Media</h2>
+                        <ul>
+                            <li>
+                                <a href="">Twitter</a>
+                                <a href="">Linkedin</a>
+                                <a href="">Instagram</a>
+                            </li>
+                        </ul>
+                    </article>
+                </article>
+            </section>
             <ul>
                 <li>
                     <img src="" alt="React">
