--- a/portfolioProjects/Platzi/portfolio-1/index.html
+++ b/portfolioProjects/Platzi/portfolio-1/index.html
@@ -34,15 +34,15 @@
         </header>
         <main class="main">
             <section class="main--container">
-                <picture>
+                <picture class="img-container">
                     <img class="main--img" src="https://picsum.photos/200" alt="My profile photo">
                 </picture>
-                <article>
-                    <h2>manuelortizus portfolio</h2>
-                    <p>This will be my description</p>
+                <article class="main--info">
+                    <h2 class="info--name">manuelortizus portfolio</h2>
+                    <p class="info--description">This will be my description</p>
                     <article>
                         <a href="/contact.html">Contact</a>
-                        <a href="/about.html">About me</a>
+                        <a href="/about.html">About</a>
                     </article>
                     <article>
                         <h2>Social Media</h2>
