--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <a href="https://GitHub.com/manuelortizus">GitHub</a>
                 <a href="https://linkdin.com/manuelortizus">Linkdin</a>
-                <a href="https://medium.com/manuelortizus">Medium</a>
+                <a href="https://medium.com/@manuelortizus">Medium</a>
                 <a href="https://twitter.com/manuelortizus">Twitter</a>
                 <a href="https://instagram.com/manuelortizus">Instagram</a>
                 <a href="https://facebook.com/manuelortizus2">Facebook</a>
