--- a/portfolioProjects/Platzi/portfolio-1/index.html
+++ b/portfolioProjects/Platzi/portfolio-1/index.html
@@ -39,10 +39,10 @@
                 </picture>
                 <article class="main--info">
                     <h2 class="info--name">manuelortizus portfolio</h2>
-                    <p class="info--description">This will be my description</p>
-                    <article>
-                        <a href="/contact.html">Contact</a>
-                        <a href="/about.html">About</a>
+                    <p class="info--description">Hi, My Name's Manuel Ortiz but you can call me MAO or manuelortizus, I born in Colombia and currently living there, I'm 20 years old, I'm studying (Learning, Practicing, Learning-Building) English (Currently I'm an A1 English Level), Engineer Software (Currently Web Development, Data Science-Engineer, AI, Machine Learning) and Hardware (Currently Technical Electronical Engineer) My Hobbits (best ways, ways that I like do) are Writing (Note Taking with Obsidian), Reading books, Listening Podcasts, audiobooks; Sharing time, doing, building extraordinary things with the people that I love and Love me) Friends entreprenur that have similar challenges, ambitios, purposes that me (Edu-Health-NeuroTech Entrepreneurs Founders), Family (Mother, Father, Brother, Girlfriend (with similar challenges, ambitions, purposes (Edu-Health-NeuroTech Entrepreneurs Founders)) Entrepreneur)</p>
+                    <article class="main--links">
+                        <a class="main--link main--link__salmon" href="./contact.html">Contact</a>
+                        <a class="main--link main--link__transparent" href="./about.html">About</a>
                     </article>
                     <article>
                         <h2>Social Media</h2>
