update and upgrade 12/03/2022 portfolio-1/projects

--- a/portfolioProjects/Platzi/portfolio-1/index.html
+++ b/portfolioProjects/Platzi/portfolio-1/index.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/d6b6cfd908.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header">
@@ -44,13 +45,13 @@
                         <a class="main--link main--link__salmon" href="./contact.html">Contact</a>
                         <a class="main--link main--link__transparent" href="./about.html">About</a>
                     </article>
-                    <article>
-                        <h2>Social Media</h2>
+                    <article class="main--social-media">
+                        <h2>Follow me in </h2>
                         <ul>
                             <li>
-                                <a href="">Twitter</a>
-                                <a href="">Linkedin</a>
-                                <a href="">Instagram</a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
                             </li>
                         </ul>
                     </article>
