update and upgrade 12/05/2022 portfolio-1 projects, project--description{ fontsize: 14px;

--- a/portfolioProjects/Platzi/portfolio-1/projects.html
+++ b/portfolioProjects/Platzi/portfolio-1/projects.html
@@ -32,8 +32,8 @@
     <main>
         <ul class="project-list">
             <li>
-                <img src="" alt="Project">
-                <p>FreeCodeCamp New Web Responsibe Project Learning Building</p>
+                <img class="project--img" src="/portfolioProjects/freeCodeCamp/newReponsibeWebDesign/catPhotoApp/catPhotoApp.png" alt="Project">
+                <p class="project--description">FreeCodeCamp New Web Responsibe Project Learning Building</p>
                 <span>Html</span>
                 <span>css</span>
                 <article>
