--- a/portfolioProjects/projects.html
+++ b/portfolioProjects/projects.html
@@ -11,7 +11,7 @@
     <section>
         <a href="https://freecodecamp.org">FreeCodeCamp</a>
         <li>New Responsibe Web Design</li>
-        <a href="freeCodeCamp/New Reponsibe Web Design/catPhotoApp.html">Cat Photo App</a>
+        <a href="./freeCodeCamp/newReponsibeWebDesign/catPhotoApp/catPhotoApp.html">Cat Photo App</a>
         <a href="freeCodeCamp/newReponsibeWebDesign/cafeMenu/cafeMenu.html">Cafe Menu</a>
     </section>
     <section>
