--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="">ABOUT ME</a>
                 <a href="">RESUME</a>
                 <a href="portfolioProjects/projects.html">PROJECTS</a>
-                <a href="learningBulding.html">LEARNING BUILDING</a>
+                <a href="./Learning Bulding/learningBulding.html">LEARNING BUILDING</a>
                 <a href="">THE BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
