--- a/portfolioProjects/Platzi/portfolio-1/projects.html
+++ b/portfolioProjects/Platzi/portfolio-1/projects.html
@@ -34,8 +34,8 @@
             <li>
                 <img class="project--img" src="/portfolioProjects/freeCodeCamp/newReponsibeWebDesign/catPhotoApp/catPhotoApp.png" alt="Project">
                 <p class="project--description">FreeCodeCamp New Web Responsibe Project Learning Building</p>
-                <span>Html</span>
-                <span>css</span>
+                <span class="project--technology">Html</span>
+                <span class="project--technology">css</span>
                 <article>
                     <a href="/">Watch here</a>
                     <a href="/">Repository</a>
