update and upgrade 12/07/2022 twitter clone

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/projects.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/projects.html
@@ -37,7 +37,7 @@
                 <span class="project--technology">Html</span>
                 <span class="project--technology">css</span>
                 <article>
-                    <a href="/">Watch here</a>
+                    <a href="/portfolioProjects/freeCodeCamp/newReponsibeWebDesign/catPhotoApp/catPhotoApp.html">Watch here</a>
                     <a href="/">Repository</a>
                 </article>
             </li>
