--- a/portfolioProjects/projects.html
+++ b/portfolioProjects/projects.html
@@ -38,9 +38,7 @@
         <h2>
             <a href="https:/platzi.com">Platzi</a>
         </h2>
-        <a href="">JavaScript</a>
-        <a href="">Data Science, AI, ML</a>
-        <a href="Platzi/portfolio-1/index.html">Portfolio</a>
+        <a href="Platzi/Engineer/Engineer.html">Engineer</a>
         <a href="">English</a>
     </section>
 </body>
