update and upgrade 12/09/2022 Twitter background

--- a/portfolioProjects/Platzi/Engineer/Engineer.html
+++ b/portfolioProjects/Platzi/Engineer/Engineer.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Platzi Engineer</h1>
     <h2>Web Development</h2>
-    <a href="/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/index.html">PlatziChallenge Portflio</a>
+    <a href="./challengePortfolio/portfolio-1/index.html">PlatziChallenge Portflio</a>
     <h2>Data Science</h2>
 </body>
 </html>
