--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -5,12 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter bonito</title>
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./source/css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <span>Twitter</span>
+    </header>
+    <main>
+        <div>
+
+            <h1>what is past now</h1>
+            <h2>Join Twitter today</h2>
+            <div>
+                <button>
+                    <span>g</span> Sign in with Google
+                </button>
+                <button><span>a</span> Sign in with Apple</button>
+                <div><span>o</span></div>
+                <button>Register with the smartphone number</button>
+                <p>when registering you accept the terms and conditions</p>
+            </div>
+            <div>
+                <h3>Do you already have an account?</h3>
+                <button>Log in</button>
+            </div>
+        </div>
+        <div>
+            Background
+        </div>
+    </main>
 </body>
 </html>
