--- a/portfolioProjects/projects.html
+++ b/portfolioProjects/projects.html
@@ -38,7 +38,7 @@
         <h2>
             <a href="https:/platzi.com">Platzi</a>
         </h2>
-        <a href="Platzi/Engineer/Engineer.html">Engineer</a>
+        <a href="./Platzi/Engineer/Engineer.html">Engineer</a>
         <a href="">English</a>
     </section>
 </body>
