update and upgrade 12/10/2022 twitter-clone index.css

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/projects.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/projects.html
@@ -41,6 +41,16 @@
                     <a href="/">Repository</a>
                 </article>
             </li>
+            <li>
+                <img class="project--img" src="/portfolioProjects/freeCodeCamp/newReponsibeWebDesign/catPhotoApp/catPhotoApp.png" alt="Project">
+                <p class="project--description">Twitter-clone</p>
+                <span class="project--technology">Html</span>
+                <span class="project--technology">css</span>
+                <article>
+                    <a href="./twitter-clon/index.html">Watch here</a>
+                    <a href="/">Repository</a>
+                </article>
+            </li>
         </ul>
     </main>
 </body>
