--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -9,10 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d6b6cfd908.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <span>Twitter</span>
+    <header class="header">
+        <span class="header--icon"><i class="fa-brands fa-twitter"></i></span>
     </header>
     <main>
         <div>
@@ -36,6 +37,11 @@
         <div>
             Background
         </div>
+        <footer>
+            <ul>
+                <li>About</li>
+            </ul>
+        </footer>
     </main>
 </body>
 </html>
