--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter bonito</title>
-    <link rel="stylesheet" href="./source/css/base.css">
+    <link rel="stylesheet" href="./src/css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d6b6cfd908.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./src/css/index.css">
 </head>
 <body>
     <header class="header">
         <span class="header--icon"><i class="fa-brands fa-twitter"></i></span>
     </header>
-    <main>
+    <main class="main">
         <div>
-
-            <h1>what is past now</h1>
-            <h2>Join Twitter today</h2>
-            <div>
-                <button>
+            <section class="main--titles">
+                <h1 class="titles--title">what is past now</h1>
+                <h2 class="titles--title">Join Twitter today</h2>
+            </section>
+            <div class="main--buttons">
+                <button class="main--button">
                     <span>g</span> Sign in with Google
                 </button>
                 <button><span>a</span> Sign in with Apple</button>
