update and upgrade 12/13/2022 background: white;

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -23,17 +23,17 @@
                 <h2 class="titles--title">Join Twitter today</h2>
             </section>
             <div class="main--buttons">
-                <button class="main--button">
-                    <span>g</span> Sign in with Google
+                <button class="main--button main--button__white">
+                    <span><i class="fa-brands fa-google"></i></span> Sign in with Google
                 </button>
-                <button><span>a</span> Sign in with Apple</button>
+                <button class="main--button main--button__white"><span><i class="fa-brands fa-apple"></i></span> Sign in with Apple</button>
                 <div><span>o</span></div>
-                <button>Register with the smartphone number</button>
+                <button class="main--button main--button__blue">Register with the smartphone number</button>
                 <p>when registering you accept the terms and conditions</p>
             </div>
             <div>
                 <h3>Do you already have an account?</h3>
-                <button>Log in</button>
+                <button class="main--button main--button__white">Log in</button>
             </div>
         </div>
         <div>
