update and upgrade 12/14/2022 twitter-clone main--text width: 50%;

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -27,9 +27,9 @@
                     <span><i class="fa-brands fa-google"></i></span> Sign in with Google
                 </button>
                 <button class="main--button main--button__white"><span><i class="fa-brands fa-apple"></i></span> Sign in with Apple</button>
-                <div><span>o</span></div>
+                <div class="main--division"><span>o</span></div>
                 <button class="main--button main--button__blue">Register with the smartphone number</button>
-                <p>when registering you accept the terms and conditions</p>
+                <p class="main--text">when registering you accept the terms and conditions</p>
             </div>
             <div>
                 <h3>Do you already have an account?</h3>
