--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -29,11 +29,12 @@
                 <button class="main--button main--button__white"><span><i class="fa-brands fa-apple"></i></span> Sign in with Apple</button>
                 <div class="main--division"><span>o</span></div>
                 <button class="main--button main--button__blue">Register with the smartphone number</button>
-                <p class="main--text">when registering you accept the terms and conditions</p>
+                <p class="main--text">when registering you accept <a class="text--link" href="">the terms and conditions services</a> and <a class="text--link" href="">privacy politic</a>, include politic <a class="text--link" href="">cookies use</a>
+                </p>
             </div>
             <div>
                 <h3>Do you already have an account?</h3>
-                <button class="main--button main--button__white">Log in</button>
+                <button class="main--button main--button__white main--button__white-blue">Log in</button>
             </div>
         </div>
         <div>
