up/date-grade 16-12-2022 backgroud twitter-clone .main--background {align-items:center;}

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -37,14 +37,14 @@
                 <button class="main--button main--button__white main--button__white-blue">Log in</button>
             </div>
         </div>
-        <div>
-            Background
+        <div class="main--background">
+            <span class="header--icon header--icon__white"><i class="fa-brands fa-twitter"></i></span>
         </div>
-        <footer>
-            <ul>
-                <li>About</li>
-            </ul>
-        </footer>
     </main>
+    <footer>
+        <ul>
+            <li>About</li>
+        </ul>
+    </footer>
 </body>
 </html>
