up-date/grade 12/19/2022 twitter-clone .footer--list li a{ color: #536471}

--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/index.html
@@ -41,9 +41,15 @@
             <span class="header--icon header--icon__white"><i class="fa-brands fa-twitter"></i></span>
         </div>
     </main>
-    <footer>
-        <ul>
-            <li>About</li>
+    <footer class="footer">
+        <ul class="footer--list">
+            <li class="list--item"> <a href="">About</a></li>
+            <li> <a href="">Help Center</a></li>
+            <li> <a href="">Service conditions</a></li>
+            <li> <a href="">Guide</a></li>
+            <li> <a href="">Developers</a></li>
+            <li> <a href="">Advertising</a></li>
+            <li> <a href="">Marketing</a></li>
         </ul>
     </footer>
 </body>
