--- a/index.html
+++ b/index.html
@@ -10,28 +10,24 @@
     <main>
         <h1>Manuel Ortiz</h1>
         <!-- Description -->
-
+        <!-- My Purpose -->
+        <h2></h2>
+        <h3></h3>
         <!-- SocialMedia -->
         <section>
             <ul>
                 <a href="https://GitHub.com/manuelortizus">GitHub</a>
-                <a href="https://linkdin.com/manuelortizus">Linkdin</a>
-                <a href="https://medium.com/@manuelortizus">Medium</a>
-                <a href="https://twitter.com/manuelortizus">Twitter</a>
-                <a href="https://instagram.com/manuelortizus">Instagram</a>
-                <a href="https://facebook.com/manuelortizus2">Facebook</a>
-                <a href="https://tiktok.com/@manuelortizus">TikTok</a>
+                <a href="https://www.linkedin.com/in/manuel-ortiz-b10a03175/">LinkedIn</a>
+                <a href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
             </ul>
         </section>
         <!-- Content: about me, projects -->
         <section>
             <ul>
                 <a href="index.html">HOME</a>
-                <a href="">ABOUT ME</a>
-                <a href="">RESUME</a>
-                <a href="portfolioProjects/projects.html">PROJECTS</a>
-                <a href="./Learning Bulding/learningBulding.html">LEARNING BUILDING</a>
-                <a href="">THE BLOG</a>
+                <a href="./bio.html">BIO</a>
+                <a href="./projects.html">PROJECTS</a>
+                <a href="https://medium.com/@manuelortizus">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
 
