--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
+                <a href="./resume.html">RESUME</a>
                 <a href="https://medium.com/@manuelortizus">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
