--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,17 @@
     <title>Resume</title>
 </head>
 <body>
-    
+    <ul>
+        <li>Personal information and contact details</li>
+        <h1>Manuel Ortiz</h1>
+        <h2>Computer Science Technical</h2>
+        <li>Professional Summary</li>
+        <p>I'm a Computer Science student with experience in creating tech products projects to solve real life problems. Looking to achieve goal results in create</p>
+        <li>Relevant Experience</li>
+        <li>Education</li>
+        <li>Skills</li>
+        <li>Languages</li>
+    </ul>
+    <a href="https://static.platzi.com/media/public/uploads/resumeexamplemadeincanva_fe5be13b-356d-4eb8-90d7-bd34337e434e.pdf">Resume guide</a>
 </body>
 </html>
