Portfolio, GitHub, LinkedIn names updates

--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,13 @@
         <li>Personal information and contact details</li>
         <h1>Manuel Ortiz</h1>
         <h2>Computer Science Technical</h2>
+        <h3>
+            <ul>
+                <a href="">Portfolio</a>
+                <a href="">GitHub</a>
+                <a href="">LinkedIn</a>
+            </ul>
+        </h3>
         <li>Professional Summary</li>
         <p>I'm a Computer Science student with experience in creating tech products projects to solve real life problems. Looking to achieve goal results in create</p>
         <li>Relevant Experience</li>
