--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Personal information and contact details</li>
         <h1>Manuel Ortiz</h1>
-        <h2>Computer Science Technical</h2>
+        <h2>Technical in Computer Science</h2>
         <h3>
             <ul>
                 <a href="">Portfolio</a>
@@ -18,9 +18,18 @@
             </ul>
         </h3>
         <li>Professional Summary</li>
-        <p>I'm a Computer Science student with experience in creating tech products projects to solve real life problems. Looking to achieve goal results in create</p>
+        <h2>Professional Summary</h2>
+        <p>I'm a Computer Science student with experience in creating tech products projects to solve real life problems. Looking to achieve goal results in create valuable products with positive impact</p>
         <li>Relevant Experience</li>
+        <h2>Experience</h2>
+        <li>Restaurant Assitant</li>
+        <li>Survey Assitant</li>
+        <li>Field Assistant</li>
+        <li>Building Electronic Prodcuts Project</li>
+        <li>Electronic Devices Maintainence</li>
+        <br>
         <li>Education</li>
+        <h2>Education</h2>
         <li>Skills</li>
         <li>Languages</li>
     </ul>
