--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Content: about me, projects -->
         <section>
             <ul>
-                <area shape="rect" href="index.html">HOME</a>
+                <area shape="rect" href="index.html">HOME</area>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
