--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>manuelortizus</title>
 </head>
 <body>
+    <table>
+        <tbody>
+            <tr valign="top">
+            </tr>
+                
+        </tbody>
+    </table>
     <main>
         <h1>Manuel Ortiz</h1>
         <!-- Description -->
