--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <table>
         <tbody>
             <tr valign="top">
+                <td>
+                    <map name="1136064e0586e4f">
+                        <area shape="rect" coords="0, 21,67,42"
+                    </map>
+                </td>
             </tr>
                 
         </tbody>
