--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <tr valign="top">
                 <td>
                     <map name="1136064e0586e4f">
-                        <area shape="rect" coords="0, 21,67,42"
+                        <area shape="rect" coords="0, 21,67,42" href="bio.html">
                     </map>
                 </td>
             </tr>
