--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <td>
                     <map name="1136064e0586e4f">
                         <area shape="rect" coords="0, 21,67,42" href="bio.html">
+                        <area shape="rect" coords="0,63, 67, 63" href="projects.html">
                     </map>
                 </td>
             </tr>
