Delploy the app with GitHub Pages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                         <area shape="rect" coords="0, 21,67,42" href="bio.html">
                         <area shape="rect" coords="0,63, 67, 63" href="projects.html">
                     </map>
+                    <img src="https://s.turbifycdn.com/aah/paulgraham/img-26.gif" width="69" height="399" usemap="#1136064e0586e4f" border="0" hspace="0" vspace="0" ismap>
                 </td>
-            </tr>
-                
+            </tr>    
         </tbody>
     </table>
     <main>
