--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     <title>manuelortizus</title>
 </head>
 <body>
-    <table>
-        <tbody>
-            <tr valign="top">
-                <td>
-                    <map name="1136064e0586e4f">
-                        <area shape="rect" coords="0, 21,67,42" href="bio.html">
-                        <area shape="rect" coords="0,63, 67, 63" href="projects.html">
-                    </map>
-                    <img src="https://s.turbifycdn.com/aah/paulgraham/img-26.gif" width="69" height="399" usemap="#1136064e0586e4f" border="0" hspace="0" vspace="0" ismap>
-                </td>
-            </tr>    
-        </tbody>
-    </table>
     <main>
         <h1>Manuel Ortiz</h1>
         <!-- Description -->
@@ -37,7 +24,7 @@
         <!-- Content: about me, projects -->
         <section>
             <ul>
-                <area shape="rect" href="index.html">HOME</area>
+                <a shape="rect" href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
