--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <a href="https://GitHub.com/manuelortizus">GitHub</a>
                 <a href="https://www.linkedin.com/in/manuel-ortiz-b10a03175/">LinkedIn</a>
                 <a href="https://www.youtube.com/channel/UCmdsLKokRqs4f387dQeE-bA">Youtube</a>
+                <a href="https://www.hackster.io/manuelortizus">Hackster.io</a>
+                <a href="https://manuelortizus.medium.com/">Medium</a>
             </ul>
         </section>
         <!-- Content: about me, projects -->
@@ -29,7 +31,7 @@
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
-                <a href="https://medium.com/@manuelortizus">BLOG</a>
+                <a href="./blog.html">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
 
