--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <ul>
-        <p>Electronic Engineer</p>
-        <li>Source</li>
+        <h1>Electronic Engineer</h1>
+        <li href="./projects/source.html">Source</li>
         <li>Sound Amplifer</li>
         <li>Remote control car</li>
         <li>Electric house model</li>
+        <li>Fixing Computers</li>
     </ul>
     <ul>
         <li></li>
