--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@
 <body>
     <ul>
         <h1>Electronic Engineer</h1>
-        <li href="./projects/source.html">Source</li>
+        <li>Source</li>
         <li>Sound Amplifer</li>
         <li>Remote control car</li>
         <li>Electric house model</li>
-        <li>Fixing Computers</li>
+        <li><a href="./projects/fixingPc.html">Fixing Computers</a></li>
     </ul>
     <ul>
         <li></li>
