--- a/projects/fixingPc.html
+++ b/projects/fixingPc.html
@@ -7,16 +7,20 @@
 </head>
 <body>
     <h1>Fixing Computers</h1>
-    <img src="https://hackster.imgix.net/uploads/attachments/1631056/_WJNWeChXeS.blob?auto=compress%2Cformat&w=900&h=675&fit=min" alt="">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631056/_WJNWeChXeS.blob?auto=compress%2Cformat&w=900&h=675&fit=min" alt="pc">
     <h4>Computer fixed</h4>
     <h2>Things used in this project</h2>
     <h3>Hardware Components</h3>
-    <h3>Software Components/h3>
+    <h3>Software Components</h3>
     <li>Microsoft Windows 10</li>
     <h2>Story</h2>
     <p>The project is about a computer that I fixed; I decide make it because was having troubles, bugs to run; It works when I rule out one of two RAM and the intern battery</p>
-    <img src="https://hackster.imgix.net/uploads/attachments/1631060/image_4rUL4YbiNQ.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="">
-    <img src="" alt="">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631060/image_4rUL4YbiNQ.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631061/image_LYRU6TNVK0.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631062/image_exvRKGMp4u.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631058/image_NFtRfTzcB5.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631059/image_ABdxc2w5W7.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
+    <img src="https://hackster.imgix.net/uploads/attachments/1631063/image_DyE0CKcrLM.png?auto=compress%2Cformat&w=740&h=555&fit=max" alt="pc">
     
     <h4>Resources</h4>
     <a href="https://hackster.io/manuelortizus">Project in Hackster.io</a>
