--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
                 <a href="./blog.html">BLOG</a>
+                <a href="./anaMaria.html">Ana Maria</a>
                 <a href="">CONTACT</a>
             </ul>
 
