--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <a shape="rect" href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
+                <a href="./pipe.html">PIPE</a>
                 <a href="./resume.html">RESUME</a>
                 <a href="./blog.html">BLOG</a>
-                <a href="./anaMaria.html">Ana Maria</a>
                 <a href="">CONTACT</a>
             </ul>
 
