--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
         <li>Remote control car</li>
         <li>Electric house model</li>
         <li><a href="./projects/fixingPc.html">Fixing Computers</a></li>
+        <li><a href="./projects/Notespy.html">Notes autcome with Python</a></li>
     </ul>
     <ul>
         <li></li>
