--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="./bio.html">BIO</a>
                 <a href="./projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
-                <a href="./blog.html">BLOG</a>
+                <a href="./blog/blog.html">BLOG</a>
                 <a href="">CONTACT</a>
             </ul>
 
