academic notes with python html update

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,6 +14,7 @@
         <li>Remote control car</li>
         <li>Electric house model</li>
         <li><a href="./projects/fixingPc.html">Fixing Computers</a></li>
+        <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
     </ul>
     <ul>
         <li></li>
