--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <a shape="rect" href="index.html">HOME</a>
                 <a href="./bio.html">BIO</a>
-                <a href="./projects.html">PROJECTS</a>
+                <a href="./projects/projects.html">PROJECTS</a>
                 <a href="./resume.html">RESUME</a>
                 <a href="./blog/blog.html">BLOG</a>
                 <a href="">CONTACT</a>
