Fixing Computers link fixed

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,7 +13,7 @@
         <li>Sound Amplifer</li>
         <li>Remote control car</li>
         <li>Electric house model</li>
-        <li><a href="./projects/fixingPc.html">Fixing Computers</a></li>
+        <li><a href="./fixingPc.html">Fixing Computers</a></li>
         <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
     </ul>
     <ul>
