Updates product projects, never stop learning building projects!

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -7,15 +7,26 @@
     <title>Projects</title>
 </head>
 <body>
-    <ul>
-        <h1>Electronic Engineer</h1>
-        <li>Source</li>
-        <li>Sound Amplifer</li>
-        <li>Remote control car</li>
-        <li>Electric house model</li>
-        <li><a href="./fixingPc.html">Fixing Computers</a></li>
-        <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
-    </ul>
+    <h1>Projects that I've built</h1>
+    <h2>Systems projects</h2>
+        <ul>
+            <li>Portfolio SENA</li>
+        </ul>
+    <h2>Electronic Engineer</h1>
+        <ul>
+            <h3>Built</h3>
+            <li><a href="./source.html">Source</a></li>
+            <li>Motor turn control</li>
+            <li>Sound Amplifer</li>
+            <li><a href="./remoteCar.html">Remote Control Car</a></li>
+            <li>Electric house model</li>
+            <li><a href="./fixingPc.html">Fixing Computers</a></li>
+            <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
+            <h3>Code, simulations</h3>
+            <li></li>
+            <h3>Maintainance</h3>
+        </ul>
+    <h2>Platzi</h2>
     <ul>
         <li></li>
     </ul>
