--- a/projects/remoteCar.html
+++ b/projects/remoteCar.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Source</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Electronic source project</h1>
-    <a href="https://photos.app.goo.gl/o3sKuYwTonssRuTh8">Link resources project</a>
+    <h1>Remote Control Car</h1>
+    <a href="https://photos.app.goo.gl/u3MSQEHe4FXk9nWf6">Resources</a>
 </body>
 </html>
