update intelligent house project, never stop learning!

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -19,7 +19,7 @@
             <li>Motor turn control</li>
             <li>Sound Amplifer</li>
             <li><a href="./remoteCar.html">Remote Control Car</a></li>
-            <li>Electric house model</li>
+            <li><a href="./inteligentHouse.html">Electric house model</a></li>
             <li><a href="./fixingPc.html">Fixing Computers</a></li>
             <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
             <h3>Code, simulations</h3>
