--- a/projects/projects.html
+++ b/projects/projects.html
@@ -20,11 +20,11 @@
             <li>Sound Amplifer</li>
             <li><a href="./remoteCar.html">Remote Control Car</a></li>
             <li><a href="./inteligentHouse.html">Electric house model</a></li>
-            <li><a href="./fixingPc.html">Fixing Computers</a></li>
-            <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
+            <li><a href="https://photos.app.goo.gl/1Qv9hwke91t4cr7m8">Faraday Engine</a></li>
             <h3>Code, simulations</h3>
-            <li></li>
+            <li><a href="./Notespy.html">Academic Notes outcome with Python</a></li>
             <h3>Maintainance</h3>
+            <li><a href="./fixingPc.html">Fixing Computers</a></li>
         </ul>
     <h2>Platzi</h2>
     <ul>
