update Electronic Source prototype project

--- a/projects/source.html
+++ b/projects/source.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Source</title>
+    <title>Electronic Source</title>
 </head>
 <body>
-    <h1>Electronic source project</h1>
+    <h1>Electronic Source Project</h1>
+    
+    <h2>Project Materials</h2>
+    <ul>
+        <li><h3>Virgin Baquela for PCB plate</h3></li>
+        </ul>
+        <li>Termotransferible paper sheet or acetate laminate</li>
+    <h2>Tools Projects</h2>
+
+    <h3>Clothes Iron</h3>
+    <h2>Steps</h2>
+    <h3>1. Design Circuit in Proteus or other Electronic PCB designer and simulation program</h3>
+    <h3>2. Print Circuit in PDF in acetate Laminate or Termotransferible paper sheet</h3>
+    <h3>3. Iron the termotransferible paper sheet or acetate lamiante above the Baquela</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aKCndOt1PI0?si=wTgpe4MkPBIl8C28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ryuAFFXrBFE?si=jX0AVHAOYaoiMDoW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ft0cRGh_7uY?si=eqjvYU5kjAljNRYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B1ozCPvGR64?si=izFxWEYxy6XxuseG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/o6XKJXriX98?si=CzjJMcU3upeN5NrS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UwlQPGVQDHA?si=009QBG42FztwtlOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
     <a href="https://photos.app.goo.gl/o3sKuYwTonssRuTh8">Link resources project</a>
 </body>
 </html>
